# cookiecutter-poetry-python

./: README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: test_main.py
