[tool.poetry]
name = "cookiecutter-poetry-python"
version = "0.1.0"
description = "A simple (and somewhat opinionated) python poetry backed project template."
authors = ["lukhar <lukasz.har@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
cookiecutter = "^1.7.0"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
black = {version = "19.10b0",allow-prereleases = true}
python-language-server = "^0.31.9"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         
    | \.git          
    | build
    | dist
    | generated
  )/
)
'''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
