[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
{% if cookiecutter.author %}
  "{{ cookiecutter.author }}"
{% endif %}
]

packages = [
    {include = "{{ cookiecutter.project_slug }}", from="src"},
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "5.3.2"
black = {version = "19.10b0",allow-prereleases = true}
invoke = "^1.3"


[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         
    | \.git          
    | build
    | dist
    | generated
  )/
)
'''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
